# CLE

./: .gitignore  README.md  emojis.h  functions.hpp  lse  lse.cpp  mycatcli  mycatli.cpp
aws/: CMakeLists.txt  main.cpp
ce/: ce  ce.cpp
lse/: functions.hpp  lse  lse.cpp
lse/tests/: file.txt
lse/values/: file_emoji_color.h
